tests/baselines/reference/typeGuardOfFormTypeOfOther(strict=true).errors.txt
typeGuardOfFormTypeOfOther.ts(1,19): error TS2564: Property 'p' has no initializer and is not definitely assigned in the constructor.
typeGuardOfFormTypeOfOther.ts(21,5): error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
typeGuardOfFormTypeOfOther.ts(21,12): error TS2454: Variable 'strOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(25,9): error TS2322: Type 'string | C' is not assignable to type 'string'.
  Type 'C' is not assignable to type 'string'.
typeGuardOfFormTypeOfOther.ts(25,22): error TS2454: Variable 'strOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(27,5): error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
typeGuardOfFormTypeOfOther.ts(27,12): error TS2454: Variable 'numOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(31,9): error TS2322: Type 'number | C' is not assignable to type 'number'.
  Type 'C' is not assignable to type 'number'.
typeGuardOfFormTypeOfOther.ts(31,23): error TS2454: Variable 'numOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(33,5): error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
typeGuardOfFormTypeOfOther.ts(33,12): error TS2454: Variable 'boolOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(37,9): error TS2322: Type 'boolean | C' is not assignable to type 'boolean'.
  Type 'C' is not assignable to type 'boolean'.
typeGuardOfFormTypeOfOther.ts(37,23): error TS2454: Variable 'boolOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(39,12): error TS2454: Variable 'strOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(40,5): error TS2322: Type 'string | C' is not assignable to type 'C'.
  Type 'string' is not assignable to type 'C'.
typeGuardOfFormTypeOfOther.ts(40,9): error TS2454: Variable 'strOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(43,9): error TS2322: Type 'string | C' is not assignable to type 'string'.
  Type 'C' is not assignable to type 'string'.
typeGuardOfFormTypeOfOther.ts(43,22): error TS2454: Variable 'strOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(46,5): error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
typeGuardOfFormTypeOfOther.ts(46,12): error TS2454: Variable 'strOrNumOrBool' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(50,41): error TS2454: Variable 'strOrNumOrBool' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(56,5): error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
typeGuardOfFormTypeOfOther.ts(56,12): error TS2454: Variable 'strOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(57,9): error TS2322: Type 'string | C' is not assignable to type 'string'.
  Type 'C' is not assignable to type 'string'.
typeGuardOfFormTypeOfOther.ts(57,22): error TS2454: Variable 'strOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(62,5): error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
typeGuardOfFormTypeOfOther.ts(62,12): error TS2454: Variable 'numOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(63,9): error TS2322: Type 'number | C' is not assignable to type 'number'.
  Type 'C' is not assignable to type 'number'.
typeGuardOfFormTypeOfOther.ts(63,22): error TS2454: Variable 'numOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(68,5): error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
typeGuardOfFormTypeOfOther.ts(68,12): error TS2454: Variable 'boolOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(69,9): error TS2322: Type 'boolean | C' is not assignable to type 'boolean'.
typeGuardOfFormTypeOfOther.ts(69,23): error TS2454: Variable 'boolOrC' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(75,5): error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
typeGuardOfFormTypeOfOther.ts(75,12): error TS2454: Variable 'strOrNumOrBool' is used before being assigned.
typeGuardOfFormTypeOfOther.ts(76,41): error TS2454: Variable 'strOrNumOrBool' is used before being assigned.


==== typeGuardOfFormTypeOfOther.ts (36 errors) ====
    class C { private p: string };
                      ~
!!! error TS2564: Property 'p' has no initializer and is not definitely assigned in the constructor.
    
    var str: string;
    var bool: boolean;
    var num: number;
    var strOrNum: string | number;
    var strOrBool: string | boolean;
    var numOrBool: number | boolean
    var strOrNumOrBool: string | number | boolean;
    var strOrC: string | C;
    var numOrC: number | C;
    var boolOrC: boolean | C;
    var emptyObj: {};
    var c: C;
    
    // A type guard of the form typeof x === s, 
    // where s is a string literal with any value but 'string', 'number' or 'boolean',
    //  - when true, removes the primitive types string, number, and boolean from the type of x, or
    //  - when false, has no effect on the type of x.
    
    if (typeof strOrC === "Object") {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
               ~~~~~~
!!! error TS2454: Variable 'strOrC' is used before being assigned.
        c = strOrC; // C
    }
    else {
        var r2: string = strOrC; // string
            ~~
!!! error TS2322: Type 'string | C' is not assignable to type 'string'.
!!! error TS2322:   Type 'C' is not assignable to type 'string'.
                         ~~~~~~
!!! error TS2454: Variable 'strOrC' is used before being assigned.
    }
    if (typeof numOrC === "Object") {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
               ~~~~~~
!!! error TS2454: Variable 'numOrC' is used before being assigned.
        c = numOrC; // C
    }
    else {
        var r3: number  = numOrC; // number
            ~~
!!! error TS2322: Type 'number | C' is not assignable to type 'number'.
!!! error TS2322:   Type 'C' is not assignable to type 'number'.
                          ~~~~~~
!!! error TS2454: Variable 'numOrC' is used before being assigned.
    }
    if (typeof boolOrC === "Object") {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
               ~~~~~~~
!!! error TS2454: Variable 'boolOrC' is used before being assigned.
        c = boolOrC; // C
    }
    else {
        var r4: boolean = boolOrC; // boolean
            ~~
!!! error TS2322: Type 'boolean | C' is not assignable to type 'boolean'.
!!! error TS2322:   Type 'C' is not assignable to type 'boolean'.
                          ~~~~~~~
!!! error TS2454: Variable 'boolOrC' is used before being assigned.
    }
    if (typeof strOrC === "Object" as string) { // comparison is OK with cast
               ~~~~~~
!!! error TS2454: Variable 'strOrC' is used before being assigned.
        c = strOrC; // error: but no narrowing to C
        ~
!!! error TS2322: Type 'string | C' is not assignable to type 'C'.
!!! error TS2322:   Type 'string' is not assignable to type 'C'.
            ~~~~~~
!!! error TS2454: Variable 'strOrC' is used before being assigned.
    }
    else {
        var r5: string = strOrC; // error: no narrowing to string
            ~~
!!! error TS2322: Type 'string | C' is not assignable to type 'string'.
!!! error TS2322:   Type 'C' is not assignable to type 'string'.
                         ~~~~~~
!!! error TS2454: Variable 'strOrC' is used before being assigned.
    }
    
    if (typeof strOrNumOrBool === "Object") {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
               ~~~~~~~~~~~~~~
!!! error TS2454: Variable 'strOrNumOrBool' is used before being assigned.
        let q1: {} = strOrNumOrBool; // {}
    }
    else {
        let q2: string | number | boolean = strOrNumOrBool; // string | number | boolean
                                            ~~~~~~~~~~~~~~
!!! error TS2454: Variable 'strOrNumOrBool' is used before being assigned.
    }
    
    // A type guard of the form typeof x !== s, where s is a string literal,
    //  - when true, narrows the type of x by typeof x === s when false, or
    //  - when false, narrows the type of x by typeof x === s when true.
    if (typeof strOrC !== "Object") {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
               ~~~~~~
!!! error TS2454: Variable 'strOrC' is used before being assigned.
        var r2: string = strOrC; // string
            ~~
!!! error TS2322: Type 'string | C' is not assignable to type 'string'.
!!! error TS2322:   Type 'C' is not assignable to type 'string'.
                         ~~~~~~
!!! error TS2454: Variable 'strOrC' is used before being assigned.
    }
    else {
        c = strOrC; // C
    }
    if (typeof numOrC !== "Object") {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
               ~~~~~~
!!! error TS2454: Variable 'numOrC' is used before being assigned.
        var r3: number = numOrC; // number
            ~~
!!! error TS2322: Type 'number | C' is not assignable to type 'number'.
!!! error TS2322:   Type 'C' is not assignable to type 'number'.
                         ~~~~~~
!!! error TS2454: Variable 'numOrC' is used before being assigned.
    }
    else {
        c = numOrC; // C
    }
    if (typeof boolOrC !== "Object") {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
               ~~~~~~~
!!! error TS2454: Variable 'boolOrC' is used before being assigned.
        var r4: boolean = boolOrC; // boolean
            ~~
!!! error TS2322: Type 'boolean | C' is not assignable to type 'boolean'.
                          ~~~~~~~
!!! error TS2454: Variable 'boolOrC' is used before being assigned.
    }
    else {
        c = boolOrC; // C
    }
    
    if (typeof strOrNumOrBool !== "Object") {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"string" | "number" | "bigint" | "boolean" | "symbol" | "undefined" | "object" | "function"' and '"Object"' have no overlap.
               ~~~~~~~~~~~~~~
!!! error TS2454: Variable 'strOrNumOrBool' is used before being assigned.
        let q1: string | number | boolean = strOrNumOrBool; // string | number | boolean
                                            ~~~~~~~~~~~~~~
!!! error TS2454: Variable 'strOrNumOrBool' is used before being assigned.
    }
    else {
        let q2: {} = strOrNumOrBool; // {}
    }
    